[project]
name = "explore-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fatima tul Zahra", email = "zahratulfatima78@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
explore-uv = "explore_uv:main"
Hello-World = "explore_uv.Hello_world:helloworld"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
